// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <div>
        LABEL
      </div>
    </div>
    <h3
      aria-level="3"
      role="heading"
    >
      Venezuela shows how Corbyn’s socialism works
    </h3>
    <div>
      <ArticleFlags
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </div>
  </div>
  <div>
    <Image
      aspectRatio={1.7777777777777777}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
</Link>
`;

exports[`2. tile b 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <span>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`3. tile c 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <Image
        aspectRatio={1.7777777777777777}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
      />
    </div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`4. tile d 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <Image
        aspectRatio={1.5}
        uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
      />
    </div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`5. tile e 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <Image
        aspectRatio={0.8}
        uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
      />
    </div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`6. tile f 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <h4
        aria-level="4"
        role="heading"
      >
        Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
      </h4>
      <div>
        <span>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`7. tile g 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <Image
        aspectRatio={1}
        borderRadius={256}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
    </div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`8. tile h 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <span>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
      <div>
        <span>
          Gregor Robertson
        </span>
      </div>
    </div>
    <div>
      <div>
        <Image
          aspectRatio={0.6666666666666666}
          uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`9. tile i 1`] = `
<Link
  url="/article/123"
>
  <div>
    <Image
      aspectRatio={1.7777777777777777}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div>
    <div>
      <div>
        LABEL
      </div>
    </div>
    <h3
      aria-level="3"
      role="heading"
    >
      Venezuela shows how Corbyn’s socialism works
    </h3>
    <div>
      <ArticleFlags
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </div>
  </div>
</Link>
`;

exports[`10. tile j 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <Image
        aspectRatio={1.5}
        uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
      />
    </div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`11. tile l 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`12. tile m 1`] = `
<Link>
  <div>
    <div>
      <h3
        aria-level="3"
        role="heading"
      >
        Driving Off
      </h3>
      <h4
        aria-level="4"
        role="heading"
      >
        Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
      </h4>
      <div>
        <ArticleFlags />
      </div>
    </div>
  </div>
</Link>
`;

exports[`13. tile n 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <Image
        aspectRatio={1}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
    </div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <span>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </span>
      </div>
      <div>
        <ArticleFlags
          color="#CCC"
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`14. tile o 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <ArticleFlags
          color="#CCC"
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`15. tile r 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
    <div>
      <Image
        aspectRatio={1.7777777777777777}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
      />
    </div>
  </div>
</Link>
`;

exports[`16. tile t 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <Image
        aspectRatio={1.7777777777777777}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
      />
    </div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Venezuela shows how Corbyn’s socialism works
      </h3>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;
